@@ -236,7 +236,39 @@ class LegacyRouteSetTests < Test::Unit::TestCase
       map.connect ':controller/:action/:id'
     end
   end
+  
+  def test_should_list_options_diff_when_routing_requirements_dont_match
+    rs.draw do |map|
+      map.post 'post/:id', :controller=> 'post', :action=> 'show', :requirements => {:id => /\d+/}
+    end
+    exception = assert_raise(ActionController::RoutingError) { rs.generate(:controller => 'post', :action => 'show', :bad_param => "foo", :use_route => "post") }
+    assert_match /^post_url failed to generate/, exception.message
+    from_match = exception.message.match(/from \{[^\}]+\}/).to_s
+    assert_match /:bad_param=>"foo"/,   from_match
+    assert_match /:action=>"show"/,     from_match
+    assert_match /:controller=>"post"/, from_match
+    
+    expected_match = exception.message.match(/expected: \{[^\}]+\}/).to_s
+    assert_no_match /:bad_param=>"foo"/,   expected_match
+    assert_match    /:action=>"show"/,     expected_match
+    assert_match    /:controller=>"post"/, expected_match
 
+    diff_match = exception.message.match(/diff: \{[^\}]+\}/).to_s
+    assert_match    /:bad_param=>"foo"/,   diff_match
+    assert_no_match /:action=>"show"/,     diff_match
+    assert_no_match /:controller=>"post"/, diff_match
+  end
+
+  # this specifies the case where your formerly would get a very confusing error message with an empty diff
+  def test_should_have_better_error_message_when_options_diff_is_empty
+    rs.draw do |map|
+      map.content '/content/:query', :controller => 'content', :action => 'show'
+    end
+    exception = assert_raise(ActionController::RoutingError) { rs.generate(:controller => 'content', :action => 'show', :use_route => "content") }
+    expected_message = %[content_url failed to generate from {:action=>"show", :controller=>"content"} - you may have ambiguous routes, or you may need to supply additional parameters for this route.  content_url has the following required parameters: ["content", :query] - are they all satisifed?]
+    assert_equal expected_message, exception.message
+  end
+  
   def test_dynamic_path_allowed
     rs.draw do |map|
       map.connect '*path', :controller => 'content', :action => 'show_file'
